# FIMS

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
src/: hash_utils.py  main.py  monitor.py  storage.py
src/fims/: hashing.py  logging_config.py  main.py  monitor.py  storage.py
src/fims/snapshots/: aac5a48930977bd9_1764332104.json
tests/: test_hashing.py  test_monitor.py  test_storage.py
