[project]
name = "fims"
version = "0.0.0"
description = "FIMS CLI"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
fims = "fims.main:main"

[project.optional-dependencies]
dev = [
	"pytest",
	"flake8",
]

[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"
